kubernetes/db-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kong-db-deploy
  namespace: customendpoints-dev
  annotations:
    avature.net/team: customendpoints
    avature.net/environment: Development
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db-app
  template:
    metadata:
      labels:
        app: db-app
    spec:
      containers:
        - name: db
          image: postgres:9.5
          livenessProbe:
            exec:
              command: ['pg_isready', '--username', 'pguser', '--dbname', 'postgres']
            failureThreshold: 3
            periodSeconds: 30
            timeoutSeconds: 30
          resources: {}
          stdin: true
          tty: true
          volumeMounts:
            - name: database-volume
              mountPath: /var/lib/postgresql/data
            - name: database-initializer
              mountPath: /docker-entrypoint-initdb.d
          ports:
            - containerPort: 5432
          resources:
            requests:
              memory: "256Mi"
              cpu: "500m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      restartPolicy: Always
      volumes:
        - name: database-volume
          persistentVolumeClaim:
            claimName: cephfs-demo-pvc
            readOnly: false
        - name: database-initializer
          configMap:
            name: postgres-initdb-config
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: db-svc
spec:
  selector:
    app: db-app
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
