kubernetes/db-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: db
  namespace: customendpoints-dev
  annotations:
    avature.net/team: customendpoints
    avature.net/environment: Development
spec:
  containers:
    - name: db
      image: postgres:9.5
      livenessProbe:
        exec:
          command:
            - pg_isready
            - --username
            - ""
            - --dbname
            - ""
        failureThreshold: 3
        periodSeconds: 30
        timeoutSeconds: 30
      resources: {}
      stdin: true
      tty: true
      volumeMounts:
        - name: database-volume
          mountPath: /var/lib/postgresql/data
      ports:
        - containerPort: 5432
  restartPolicy: OnFailure
  volumes:
    - name: database-volume
      persistentVolumeClaim:
        claimName: cephfs-demo-pvc
        readOnly: false
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  selector:
    app: db
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
