kubernetes/kong-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kong-deploy
  namespace: customendpoints-dev
  annotations:
    avature.net/team: customendpoints
    avature.net/environment: Development
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kong
  template:
    metadata:
      labels:
        app: kong
    spec:
      containers:
        - name: kong
          image: ghcr.io/mnofresno/kong-custom
          ports:
            - containerPort: 8000
              name: gateway
            - containerPort: 8001
              name: admin
          volumeMounts:
            - name: kong-config
              mountPath: /etc/kong
      volumes:
        - name: kong-config
          configMap:
            name: kong-config
---
apiVersion: v1
kind: Service
metadata:
  name: kong-svc
spec:
  selector:
    app: kong
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      name: gateway
    - protocol: TCP
      port: 8001
      targetPort: 8001
      name: admin
